BITS-93:Adición de funcionalidad para confirmacion de correo
